--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -78,4 +78,4 @@ doctrine_cache:
         my_markdown_cache:
             type: %cache_type%
             file_system:
-                directory: /tmp/doctrine_cache
+                directory: %kernel.cache_dir%/tmp/doctrine_cache
