add caching to our markdownTransformer

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -34,5 +34,5 @@ services:
     #     arguments:
     #         $someArgument: 'some_value'
     AppBundle\Service\MarkdownTransformer:
-        arguments: ['@markdown.parser']
+        arguments: ['@markdown.parser', '@doctrine_cache.providers.my_markdown_cache']
         public: true
