--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,6 +18,9 @@ security:
             guard:
                 authenticators:
                     - AppBundle\Security\LoginFormAuthenticator
+
+            logout:
+                path: /logout
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
