Add plainPassword to User fixture

--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -23,3 +23,4 @@ AppBundle\Entity\SubFamily:
 AppBundle\Entity\User:
     user_{1..10}:
         email: qing.ma.web+<current()>@gmail.com
+        plainPassword: ilikesymfony
