--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -36,3 +36,7 @@ services:
     AppBundle\Service\MarkdownTransformer:
         arguments: ['@markdown.parser', '@doctrine_cache.providers.my_markdown_cache']
         public: true
+
+    AppBundle\Doctrine\HashPasswordListener:
+        tags:
+            - { name: doctrine.event_subscriber }
