--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -33,4 +33,4 @@ security:
             #form_login: ~
 
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        #- { path: ^/admin, roles: ROLE_ADMIN }
