--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -24,3 +24,4 @@ AppBundle\Entity\User:
     user_{1..10}:
         email: qing.ma.web+<current()>@gmail.com
         plainPassword: ilikesymfony
+        roles: ['ROLE_ADMIN']
